@@ -8,40 +8,37 @@ import org.abdellah.citronix.exception.ResourceNotFoundException;
 import org.abdellah.citronix.mapper.RecolteMapper;
 import org.abdellah.citronix.model.Recolte;
 import org.abdellah.citronix.model.Saison;
-import org.abdellah.citronix.repository.ChampRepository;
 import org.abdellah.citronix.repository.RecolteRepository;
 import org.abdellah.citronix.service.RecolteService;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 
 @Service
 @RequiredArgsConstructor
 @Transactional
+
 public class RecolteServiceImpl implements RecolteService {
     private final RecolteRepository recolteRepository;
-    private final ChampRepository champRepository;
     private final RecolteMapper recolteMapper;
 
     @Override
-    public RecolteResponseDTO createRecolte(RecolteRequestDTO dto) {
-        validateRecolteCreation(dto);
-
-        Recolte recolte = recolteMapper.toEntity(dto);
+    public RecolteResponseDTO createRecolte(RecolteRequestDTO request) {
+        Recolte recolte = recolteMapper.toEntity(request);
         return recolteMapper.toDTO(recolteRepository.save(recolte));
     }
 
     @Override
-    public RecolteResponseDTO updateRecolte(Long id, RecolteRequestDTO dto) {
+    public RecolteResponseDTO updateRecolte(Long id, RecolteRequestDTO request) {
         Recolte existingRecolte = recolteRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Recolte", id));
 
-        validateRecolteUpdate(dto, existingRecolte);
+//        if (!existingRecolte.getSeason().equals(request.saison())) {
+//          // je veux ajouter la valider later, make sure to chec k saison
+//        }
 
-        recolteMapper.updateEntityFromDTO(dto, existingRecolte);
+        recolteMapper.updateEntityFromDTO(request, existingRecolte);
         return recolteMapper.toDTO(recolteRepository.save(existingRecolte));
     }
 
@@ -55,45 +52,35 @@ public class RecolteServiceImpl implements RecolteService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<RecolteResponseDTO> getRecoltesByChampId(Long champId) {
-        return recolteRepository.findByChampId(champId).stream()
-                .map(recolteMapper::toDTO)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
     public RecolteResponseDTO getRecolteById(Long id) {
         return recolteRepository.findById(id)
                 .map(recolteMapper::toDTO)
                 .orElseThrow(() -> new ResourceNotFoundException("Recolte", id));
     }
 
+//    @Override
+//    @Transactional(readOnly = true)
+//    public List<RecolteResponseDTO> getRecoltesByChampId(Long champId) {
+//        return recolteRepository.findByChampId(champId).stream()
+//                .map(recolteMapper::toDTO)
+//                .toList();
+//    }
+
     @Override
     @Transactional(readOnly = true)
     public List<RecolteResponseDTO> getRecolteBySaison(Saison saison) {
         return recolteRepository.findBySaison(saison).stream()
                 .map(recolteMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
+    }
+    @Override
+    @Transactional(readOnly = true)
+    public double calculateQuantiteTotale(Long id) {
+        Recolte recolte = recolteRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Recolte", id));
+        return recolte.getQuantiteTotale();
     }
 
-    private void validateRecolteCreation(RecolteRequestDTO dto) {
-        champRepository.findById(dto.champId())
-                .orElseThrow(() -> new ResourceNotFoundException("Champ", dto.champId()));
 
-        if (recolteRepository.existsByChampIdAndSaison(dto.champId(), dto.saison())) {
-            throw new BusinessException("Une seule récolte par saison est autorisée pour un champ");
-        }
-    }
 
-    private void validateRecolteUpdate(RecolteRequestDTO dto, Recolte existingRecolte) {
-
-        if (!existingRecolte.getChamp().getId().equals(dto.champId()) ||
-
-                !existingRecolte.getSaison().equals(dto.saison())) {
-            if (recolteRepository.existsByChampIdAndSaison(dto.champId(), dto.saison())) {
-                throw new BusinessException("Une seule récolte par saison est autorisée pour un champ");
-            }
-        }
-    }
 }
